<resources>
    <string name="app_name">MeusClientes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cliente">ClienteActivity</string>
    <string name="cliente">Cliente</string>
    <string name="botao_cliente">Clientes</string>
    <string name="botao_relatorios">Relatórios</string>
    <string name="produto">Produto</string>
    <string name="valor">Valor</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="banner_principal">ca-app-pub-5718786601684803/6902625373</string>
    <string name="title_activity_produto">Produto</string>
    <string name="cliente_ativo">Cliente Ativo</string>
</resources>
