<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/tv_lv_nome_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cliente"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_lv_nome_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produto"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/tv_lv_nome_cliente"/>

    <TextView
        android:id="@+id/tv_lv_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:layout_below="@+id/tv_lv_nome_produto"
        android:layout_marginTop="15dp"/>

</RelativeLayout>
