<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="android.curso.com.br.meusclientes.activity.ClienteActivity">

    <TextView
        android:id="@+id/tv_nome_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cliente"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/et_nome_cliente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_nome_cliente"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/tv_nome_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produto"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/et_nome_cliente"/>

    <EditText
        android:id="@+id/et_nome_produto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_nome_produto"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/tv_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:layout_below="@+id/et_nome_produto"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/et_valor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_valor"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/tv_cliente_ativo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cliente_ativo"
        android:layout_below="@+id/et_valor"
        android:layout_marginTop="15dp"/>

    <Switch
        android:id="@+id/sw_cliente_ativo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="Não"
        android:textOn="Sim"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_cliente_ativo"/>

    <Button
        android:id="@+id/bt_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_cadastrar"
        android:layout_marginBottom="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
