<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_clientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_cliente"
        android:layout_above="@+id/bt_relatorios"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/bt_relatorios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_relatorios"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="93dp" />
    
    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_exemplo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_principal"
        android:layout_below="@id/bt_relatorios"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
